# time-usage-analyzer

./: README.md  pyproject.toml
data/: sample.csv  weekly_data.csv
src/time_usage_analyzer/: __main__.py  analyzer.py
src/time_usage_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
